# aoc2023

./: .gitignore  README.md  day1.ml  day2.ml  utils.ml
.github/workflows/: main.yml
aoc/: .ocamlformat  aoc.opam  dune-project
aoc/lib/: day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  dune  utils.ml
aoc/test/: aoc.ml  dune
